--- a/04 ■► React/final-app/src/components/Header/index.module.scss
+++ b/04 ■► React/final-app/src/components/Header/index.module.scss
@@ -1,11 +1,10 @@
-
+// ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 .header {
     // header overall container
     width: 100vw; // vh, vw, px, %, rem
     height: 80px;
     background-color: var(--dark-white);
     border: none;
-    border-bottom: 1px solid var(--mid-grey);
     // top navbar side of the header
     &__list {
         width: 100%;
@@ -27,17 +26,30 @@
             font-weight: 600;
             text-transform: capitalize;
             transition: var(--quick-fx);
+            #fa_caret {
+                color: var(--light-white);
+                margin: 0px 0px 0px 5px; // top right bottom left
+                scale: 0.8;
+                rotate: 180deg;
+                transition: var(--quick-fx);
+            }
             &:hover {
                 scale: 1.01;
                 color: var(--light-red);
                 border-bottom: 1px solid var(--light-red);
                 filter: drop-shadow(0 0 3px var(--mid-black));
+                #fa_caret {
+                    rotate: 0deg;
+                }
             }
             &:active {
                 transition: var(--instant-fx);
                 color: var(--mid-red);
                 border-bottom: 1px solid var(--mid-red);
                 filter: drop-shadow(0 0 8px var(--light-red));
+                #fa_caret {
+                    rotate: 0deg;
+                }
             }
         }
     }
@@ -46,7 +58,18 @@
         width: 100%;
         height: 50px;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
+        padding: 0 20px;
+        font-size: 14px;
+        font-weight: 600;
+        background: linear-gradient(to bottom, var(--mid-white), var(--light-grey));
+        border: none;
+        border-bottom: 1px solid var(--dark-grey);
+        &_search {
+            &__input {}
+            &__button {}
+        }
     }
 }
+// ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
