--- a/04 ■► React/final-app/src/components/Header/index.module.css
+++ b/04 ■► React/final-app/src/components/Header/index.module.css
@@ -1,12 +1,12 @@
 .header {
   width: 100vw;
-  height: 80px;
+  height: auto;
   background-color: var(--dark-white);
   border: none;
 }
 .header__list {
   width: 100%;
-  height: 30px;
+  height: 40px;
   background-color: transparent;
   border: none;
   border-bottom: 1px solid var(--dark-black);
@@ -53,9 +53,9 @@
 }
 .header__main {
   width: 100%;
-  height: 50px;
+  height: 60px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 0 20px;
   font-size: 14px;
@@ -63,4 +63,184 @@
   background: linear-gradient(to bottom, var(--mid-white), var(--light-grey));
   border: none;
   border-bottom: 1px solid var(--dark-grey);
+  padding: 0 5%;
+}
+.header__main_logo {
+  border: 1px solid var(--mid-grey);
+  width: 60px;
+  height: 100%;
+  overflow: hidden;
+}
+.header__main_logo__content {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+.header__main_langbar {
+  height: 100%;
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header__main_langbar #fa_globe {
+  width: auto;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 2px;
+  margin-right: 5px;
+}
+.header__main_langbar__selector {
+  width: auto;
+  height: 30px;
+  padding: 2px;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  font-weight: 600;
+  color: var(--dark-black);
+}
+.header__main_langbar__selector_options {
+  font-weight: 600;
+  background-color: var(--light-grey);
+}
+.header__main_search {
+  height: 100%;
+  width: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header__main_search__input {
+  padding-left: 10px;
+  width: 70%;
+  height: 30px;
+  border: none;
+  outline: none;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  color: var(--mid-black);
+  font-weight: 600;
+}
+.header__main_search__button {
+  width: 50px;
+  height: 30px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  background-color: var(--light-grey);
+  border: 1px solid var(--light-grey);
+  transition: var(--quick-fx);
+}
+.header__main_search__button #fa_glass {
+  color: var(--dark-grey);
+}
+.header__main_search__button:hover {
+  background-color: var(--light-red);
+  border: 1px solid var(--light-black);
+}
+.header__main_search__button:hover #fa_glass {
+  color: var(--light-black);
+}
+.header__main_search__button:active {
+  transition: var(--instant-fx);
+  background-color: var(--mid-red);
+  border: 1px solid var(--dark-black);
+}
+.header__main_search__button:active #fa_glass {
+  color: var(--dark-black);
+}
+.header__main_switch {
+  height: 100%;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header__main_switch__slider {
+  position: relative;
+  width: 40px;
+  height: 20px;
+  border: 1px solid var(--mid-grey);
+  border-radius: 10.5px;
+  box-sizing: content-box;
+  margin: 0 10px;
+  background-color: var(--light-yellow);
+}
+.header__main_switch__slider_button {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 20px;
+  height: 20px;
+  border: 1px solid var(--light-grey);
+  border-radius: 50%;
+  background-color: var(--light-white);
+}
+.header__main_switch #fa_sun {
+  scale: 1.8;
+  opacity: 0.9;
+}
+.header__main_switch #fa_moon {
+  scale: 1;
+  opacity: 0.5;
+}
+.header__main_userpanel {
+  height: 100%;
+  width: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.header__main_userpanel__image {
+  width: 40px;
+  height: 40px;
+  border: 1px solid var(--mid-grey);
+  border-radius: 50%;
+}
+.header__main_userpanel__status {
+  margin-left: 10px;
+  font-weight: 600;
+}
+.header__main_userpanel_dropdown {
+  z-index: 2;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 150px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 0px;
+  gap: 10px;
+  border: 1px solid var(--dark-black);
+  background-color: var(--light-white);
+  display: none;
+}
+.header__main_userpanel_dropdown__items {
+  font-weight: 600;
+  cursor: pointer;
+  margin-left: 30px;
+  transition: var(--quick-fx);
+}
+.header__main_userpanel_dropdown__items #fa_symbols {
+  margin-right: 5px;
+}
+.header__main_userpanel_dropdown__items:hover {
+  color: var(--light-red);
+}
+.header__main_userpanel_dropdown__items:hover #fa_symbols {
+  color: var(--light-red);
+}
+.header__main_userpanel_dropdown__items:active {
+  transition: var(--instant-fx);
+  color: var(--mid-red);
+}
+.header__main_userpanel_dropdown__items:active #fa_symbols {
+  color: var(--mid-red);
 }/*# sourceMappingURL=index.module.css.map */
