--- a/04 ■► React/final-app/src/components/Header/index.module.scss
+++ b/04 ■► React/final-app/src/components/Header/index.module.scss
@@ -2,13 +2,13 @@
 .header {
     // header overall container
     width: 100vw; // vh, vw, px, %, rem
-    height: 80px;
+    height: auto;
     background-color: var(--dark-white);
     border: none;
     // top navbar side of the header
     &__list {
         width: 100%;
-        height: 30px;
+        height: 40px;
         background-color: transparent;
         border: none;
         border-bottom: 1px solid var(--dark-black);
@@ -56,9 +56,9 @@
     // bottom main side of the header
     &__main{
         width: 100%;
-        height: 50px;
+        height: 60px;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         padding: 0 20px;
         font-size: 14px;
@@ -66,9 +66,184 @@
         background: linear-gradient(to bottom, var(--mid-white), var(--light-grey));
         border: none;
         border-bottom: 1px solid var(--dark-grey);
+        padding: 0 5%;
+        &_logo {
+            border: 1px solid var(--mid-grey);
+            width: 60px;
+            height: 100%;
+            overflow: hidden;
+            &__content {
+                width: 100%;
+                object-fit: cover;
+                object-position: center;
+            }
+        }
+        &_langbar {
+            height: 100%;
+            width: 200px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            #fa_globe {
+                width: auto;
+                height: 30px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding-bottom: 2px;
+                margin-right: 5px;
+            }
+            &__selector {
+                width: auto;
+                height: 30px;
+                padding: 2px;
+                background-color: transparent;
+                outline: none;
+                border: none;
+                font-weight: 600;
+                color: var(--dark-black);
+                &_options {
+                    font-weight: 600;
+                    background-color: var(--light-grey);
+                }
+            }
+        }
         &_search {
-            &__input {}
-            &__button {}
+            height: 100%;
+            width: 500px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            &__input {
+                padding-left: 10px;
+                width: 70%;
+                height: 30px;
+                border: none;
+                outline: none;
+                border-top-left-radius: 4px;
+                border-bottom-left-radius: 4px;
+                color: var(--mid-black);
+                font-weight: 600;
+            }
+            &__button {
+                width: 50px;
+                height: 30px;
+                border-top-right-radius: 4px;
+                border-bottom-right-radius: 4px;
+                background-color: var(--light-grey);
+                border: 1px solid var(--light-grey);
+                transition: var(--quick-fx);
+                #fa_glass {
+                    color: var(--dark-grey);
+                }
+                &:hover {
+                    background-color: var(--light-red);
+                    border: 1px solid var(--light-black);
+                    #fa_glass {
+                        color: var(--light-black);
+                    }
+                }
+                &:active {
+                    transition: var(--instant-fx);
+                    background-color: var(--mid-red);
+                    border: 1px solid var(--dark-black);
+                    #fa_glass {
+                        color: var(--dark-black);
+                    }
+                }
+            }
+        }
+        &_switch {
+            height: 100%;
+            width: 100px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            &__slider {
+                position: relative;
+                width: 40px;
+                height: 20px;
+                border: 1px solid var(--mid-grey);
+                border-radius: 10.5px;
+                box-sizing: content-box;
+                margin: 0 10px;
+                background-color: var(--light-yellow);
+                &_button {
+                    position: absolute;
+                    top: 0%;
+                    left: 0%;
+                    width: 20px;
+                    height: 20px;
+                    border: 1px solid var(--light-grey);
+                    border-radius: 50%;
+                    background-color: var(--light-white);
+                }
+            }
+            #fa_sun {
+                scale: 1.8;
+                opacity: 0.9;
+            }
+            #fa_moon {
+                scale: 1.0;
+                opacity: 0.5;
+            }
+        }
+        &_userpanel {
+            height: 100%;
+            width: 250px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            &__image {
+                width: 40px;
+                height: 40px;
+                border: 1px solid var(--mid-grey);
+                border-radius: 50%;
+            }
+            &__status {
+                margin-left: 10px;
+                font-weight: 600;
+            }
+
+            &_dropdown {
+                z-index: 2;
+                position: absolute;
+                top: 100%;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 150px;
+                height: auto;
+                display: flex;
+                flex-direction: column;
+                padding: 10px 0px;
+                gap: 10px;
+                border: 1px solid var(--dark-black);
+                background-color: var(--light-white);
+                display: none;
+                &__items {
+                    font-weight: 600;
+                    cursor: pointer;
+                    margin-left: 30px;
+                    transition: var(--quick-fx);
+                    #fa_symbols {
+                        margin-right: 5px;
+                    }
+                    &:hover {
+                        color: var(--light-red);
+                        #fa_symbols {
+                            color: var(--light-red);
+                        }
+                    }
+                    &:active {
+                        transition: var(--instant-fx);
+                        color: var(--mid-red);
+                        #fa_symbols {
+                            color: var(--mid-red);
+                        }
+                    }
+                }
+            }
         }
     }
 }
