--- a/04 ■► React/final-app/src/components/Footer/index.module.scss
+++ b/04 ■► React/final-app/src/components/Footer/index.module.scss
@@ -2,6 +2,7 @@
 .footer {
     width: 100vw;
     height: 400px;
+    border-top: 1px solid var(--mid-black);
     &__top {
         height: 360px;
         background-color: var(--dark-navy);
