--- a/04 ■► React/final-app/src/components/Header/index.module.css
+++ b/04 ■► React/final-app/src/components/Header/index.module.css
@@ -5,6 +5,7 @@
   border: none;
 }
 .header__list {
+  position: relative;
   width: 100%;
   height: 40px;
   background-color: transparent;
@@ -50,6 +51,34 @@
 }
 .header__list_buttons:active #fa_caret {
   rotate: 0deg;
+}
+.header__list_productsdropdown {
+  z-index: 2;
+  position: absolute;
+  top: 100%;
+  left: 35%;
+  width: 300px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 0px;
+  gap: 10px;
+  border: 1px solid var(--dark-black);
+  background-color: var(--light-white);
+  filter: drop-shadow(0 0 10px var(--dark-black));
+}
+.header__list_productsdropdown__items {
+  font-weight: 600;
+  cursor: pointer;
+  margin-left: 30px;
+  transition: var(--quick-fx);
+}
+.header__list_productsdropdown__items:hover {
+  color: var(--light-red);
+}
+.header__list_productsdropdown__items:active {
+  transition: var(--instant-fx);
+  color: var(--mid-red);
 }
 .header__main {
   width: 100%;
@@ -107,6 +136,9 @@
 .header__main_langbar__selector_options {
   font-weight: 600;
   background-color: var(--light-grey);
+}
+.header__main_langbar__selector_options:checked {
+  color: var(--mid-grey);
 }
 .header__main_search {
   height: 100%;
@@ -220,6 +252,7 @@
   gap: 10px;
   border: 1px solid var(--dark-black);
   background-color: var(--light-white);
+  filter: drop-shadow(0 0 10px var(--dark-black));
   display: none;
 }
 .header__main_userpanel_dropdown__items {
