--- a/04 ■► React/final-app/src/components/Header/index.module.css
+++ b/04 ■► React/final-app/src/components/Header/index.module.css
@@ -56,27 +56,56 @@
   z-index: 2;
   position: absolute;
   top: 100%;
-  left: 35%;
-  width: 300px;
+  left: 30%;
+  width: 500px;
   height: auto;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
   padding: 10px 0px;
   gap: 10px;
   border: 1px solid var(--dark-black);
   background-color: var(--light-white);
   filter: drop-shadow(0 0 10px var(--dark-black));
+  display: none;
 }
-.header__list_productsdropdown__items {
+.header__list_productsdropdown__columns {
+  display: flex;
+  flex-direction: column;
+  width: 33%;
+}
+.header__list_productsdropdown__columns_header {
+  font-size: 18px;
+  font-weight: 900;
+  margin-left: 30px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+.header__list_productsdropdown__columns_items {
   font-weight: 600;
   cursor: pointer;
   margin-left: 30px;
   transition: var(--quick-fx);
 }
-.header__list_productsdropdown__items:hover {
+.header__list_productsdropdown__columns_items:hover {
   color: var(--light-red);
 }
-.header__list_productsdropdown__items:active {
+.header__list_productsdropdown__columns_items:active {
+  transition: var(--instant-fx);
+  color: var(--mid-red);
+}
+.header__list_productsdropdown__columns_discount {
+  font-size: 18px;
+  font-weight: 900;
+  cursor: pointer;
+  margin-left: 30px;
+  text-transform: uppercase;
+  transition: var(--quick-fx);
+}
+.header__list_productsdropdown__columns_discount:hover {
+  color: var(--light-red);
+}
+.header__list_productsdropdown__columns_discount:active {
   transition: var(--instant-fx);
   color: var(--mid-red);
 }
