--- a/04 ■► React/final-app/src/components/Header/index.module.scss
+++ b/04 ■► React/final-app/src/components/Header/index.module.scss
@@ -57,33 +57,56 @@
             z-index: 2;
             position: absolute;
             top: 100%;
-            left: 35%;
-            width: 300px;
+            left: 30%;
+            width: 500px;
             height: auto;
             display: flex;
-            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
             padding: 10px 0px;
             gap: 10px;
             border: 1px solid var(--dark-black);
             background-color: var(--light-white);
             filter: drop-shadow(0 0 10px var(--dark-black));
-            // display: none;
-            &__items {
-                font-weight: 600;
-                cursor: pointer;
-                margin-left: 30px;
-                transition: var(--quick-fx);
+            display: none;
+            &__columns {
+                display: flex;
+                flex-direction: column;
+                width: 33%;
                 &_header {
-                    font-size: 16px;
-                    font-weight: 800;
+                    font-size: 18px;
+                    font-weight: 900;
                     margin-left: 30px;
+                    text-transform: uppercase;
+                    letter-spacing: 2px;
                 }
-                &:hover {
-                    color: var(--light-red);
+                &_items {
+                    font-weight: 600;
+                    cursor: pointer;
+                    margin-left: 30px;
+                    transition: var(--quick-fx);
+                    &:hover {
+                        color: var(--light-red);
+                    }
+                    &:active {
+                        transition: var(--instant-fx);
+                        color: var(--mid-red);
+                    }
                 }
-                &:active {
-                    transition: var(--instant-fx);
-                    color: var(--mid-red);
+                &_discount {
+                    font-size: 18px;
+                    font-weight: 900;
+                    cursor: pointer;
+                    margin-left: 30px;
+                    text-transform: uppercase;
+                    transition: var(--quick-fx);
+                    &:hover {
+                        color: var(--light-red);
+                    }
+                    &:active {
+                        transition: var(--instant-fx);
+                        color: var(--mid-red);
+                    }
                 }
             }
         }
