update April 27, 2023 at 13:41

--- a/04 ■► React/final-app/src/global.scss
+++ b/04 ■► React/final-app/src/global.scss
@@ -2,18 +2,18 @@
 :root {
     // custom color picks for LIGHT/DARK mode
     --default-color: rgb(0,0,255);
-    // --text-color: rgb();
-    // --link-color: rgb();
-    // --link-hover-color: rgb();
-    // --link-active-color: rgb();
-    // --default-bg-color: rgb();
-    // --footer-bg-color: rgb();
-    // --footer-bottom-color: rgb();
-    // --header-bg-color: rgb();
-    // --header-top-color: rgb();
-    // --buttons-color: rgb();
-    // --buttons-hover-color: rgb();
-    // --buttons-active-color: rgb();
+    --text-color: rgb();
+    --link-color: rgb();
+    --link-hover-color: rgb();
+    --link-active-color: rgb();
+    --default-bg-color: rgb();
+    --footer-bg-color: rgb();
+    --footer-bottom-color: rgb();
+    --header-bg-color: rgb();
+    --header-top-color: rgb();
+    --buttons-color: rgb();
+    --buttons-hover-color: rgb();
+    --buttons-active-color: rgb();
 
 
 
