--- a/04 ■► React/final-app/src/global.scss
+++ b/04 ■► React/final-app/src/global.scss
@@ -1,7 +1,7 @@
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 :root {
-    // custom color picks for LIGHT/DARK mode
-    --default-color: rgb(0,0,255);
+    // custom color picks for LIGHT/DARK mode --- this values is LIGHT mode values for starting before click conditions
+    --default-color: rgb(128,128,128);
     --text-color: rgb();
     --link-color: rgb();
     --link-hover-color: rgb();
