set color picks, not used

--- a/04 ■► React/final-app/src/components/Header/index.module.scss
+++ b/04 ■► React/final-app/src/components/Header/index.module.scss
@@ -1,4 +1,19 @@
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
+
+//                              var(--default-color)
+//                              var(--text-color)
+//                              var(--link-color)
+//                              var(--link-hover-color)
+//                              var(--link-active-color)
+//                              var(--default-bg-color)
+//                              var(--footer-bg-color)
+//                              var(--footer-bottom-color)
+//                              var(--header-bg-color)
+//                              var(--header-top-color)
+//                              var(--buttons-color)
+//                              var(--buttons-hover-color)
+//                              var(--buttons-active-color)
+
 .header {
     // header overall container
     width: 100vw; // vh, vw, px, %, rem
