update April 28, 2023 at 14:54

--- a/04 ■► React/final-app/src/components/About/index.module.css
+++ b/04 ■► React/final-app/src/components/About/index.module.css
@@ -1,6 +1,7 @@
 .about {
-  width: 100%;
+  width: 1420px;
   height: 600px;
-  border: 1px solid blue;
-  background-color: green;
+  border: none;
+  background-color: var(--default-bg-color);
+  color: var(--text-color);
 }/*# sourceMappingURL=index.module.css.map */
