--- a/04 ■► React/final-app/src/components/Footer/index.module.css
+++ b/04 ■► React/final-app/src/components/Footer/index.module.css
@@ -1,17 +1,17 @@
 .footer {
-  width: 100vw;
+  width: 1420px;
   height: 400px;
-  border-top: 1px solid var(--mid-black);
+  border-top: 1px solid var(--borders-color);
 }
 .footer__top {
   height: 360px;
-  background-color: var(--dark-navy);
-  color: var(--light-white);
+  background-color: var(--footer-bg-color);
+  color: var(--text-negative-color);
   display: flex;
   justify-content: center;
   gap: 50px;
   border: none;
-  border-bottom: 1px solid var(--mid-white);
+  border-bottom: 1px solid var(--borders-color);
 }
 .footer__top_column {
   width: 250px;
@@ -20,13 +20,13 @@
 }
 .footer__top_column__header {
   text-transform: uppercase;
-  color: var(--light-white);
+  color: var(--text-negative-color);
   font-weight: 600;
   font-size: 20px;
   margin-bottom: 25px;
 }
 .footer__top_column__items_static {
-  color: var(--light-white);
+  color: var(--text-negative-color);
   font-weight: 500;
   font-size: 16px;
   width: -moz-fit-content;
@@ -36,7 +36,7 @@
   margin-bottom: 10px;
 }
 .footer__top_column__items {
-  color: var(--light-white);
+  color: var(--text-negative-color);
   font-weight: 500;
   font-size: 16px;
   cursor: pointer;
@@ -49,35 +49,43 @@
 }
 .footer__top_column__items:hover {
   transform: translateX(10px);
-  color: var(--light-blue);
+  color: var(--link-hover-color);
 }
 .footer__top_column__items:hover #fa_brands {
-  color: var(--light-blue);
+  color: var(--link-hover-color);
+}
+.footer__top_column__items:active {
+  transition: var(--instant-fx);
+  color: var(--link-active-color);
+}
+.footer__top_column__items:active #fa_brands {
+  color: var(--link-active-color);
 }
 .footer__top_column #fa_location {
   margin-right: 5px;
-  color: var(--light-white);
+  color: var(--text-negative-color);
 }
 .footer__top_column #fa_phone {
   margin-right: 5px;
-  color: var(--light-white);
+  color: var(--text-negative-color);
 }
 .footer__top_column #fa_envelope {
   margin-right: 5px;
-  color: var(--light-white);
+  color: var(--text-negative-color);
 }
 .footer__top_column #fa_brands {
   margin-right: 5px;
-  color: var(--light-white);
+  color: var(--text-negative-color);
 }
 .footer__bottom {
   height: 40px;
   display: flex;
+  justify-content: center;
   align-items: center;
-  background-color: var(--mid-black);
+  background-color: var(--footer-bottom-color);
 }
 .footer__bottom_text {
   font-weight: 600;
-  margin-left: 40px;
-  color: var(--mid-white);
+  margin-right: 800px;
+  color: var(--text-negative-color);
 }/*# sourceMappingURL=index.module.css.map */
