--- a/04 ■► React/final-app/src/components/Footer/index.module.scss
+++ b/04 ■► React/final-app/src/components/Footer/index.module.scss
@@ -1,30 +1,48 @@
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
+
+//                              var(--default-color)
+//                              var(--text-color)
+//                              var(--text-negative-color)
+//                              var(--link-color)
+//                              var(--link-hover-color)
+//                              var(--link-active-color)
+//                              var(--default-bg-color)
+//                              var(--footer-bg-color)
+//                              var(--footer-bottom-color)
+//                              var(--header-bg-color)
+//                              var(--header-top-color)
+//                              var(--buttons-color)
+//                              var(--buttons-hover-color)
+//                              var(--buttons-active-color)
+//                              var(--filter-shadow-color)
+//                              var(--borders-color)
+
 .footer {
-    width: 100vw;
+    width: 1420px; // 100vw
     height: 400px;
-    border-top: 1px solid var(--mid-black);
+    border-top: 1px solid var(--borders-color);
     &__top {
         height: 360px;
-        background-color: var(--dark-navy);
-        color: var(--light-white);
+        background-color: var(--footer-bg-color);
+        color: var(--text-negative-color);
         display: flex;
         justify-content: center;
         gap: 50px;
         border: none;
-        border-bottom: 1px solid var(--mid-white);
+        border-bottom: 1px solid var(--borders-color);
         &_column {
             width: 250px;
             height: auto;
             margin-top: 50px;
             &__header {
                 text-transform: uppercase;
-                color: var(--light-white);
+                color: var(--text-negative-color);
                 font-weight: 600;
                 font-size: 20px;
                 margin-bottom: 25px;
             }
             &__items_static {
-                color: var(--light-white);
+                color: var(--text-negative-color);
                 font-weight: 500;
                 font-size: 16px;
                 width: fit-content;
@@ -33,7 +51,7 @@
                 }
             }
             &__items {
-                color: var(--light-white);
+                color: var(--text-negative-color);
                 font-weight: 500;
                 font-size: 16px;
                 cursor: pointer;
@@ -44,7 +62,7 @@
                 }
                 &:hover {
                     transform: translateX(10px);
-                    color: var(--light-blue);
+                    color: var(--link-hover-color);
                     // #fa_location {
                     //     color: var(--light-blue);
                     // }
@@ -55,25 +73,32 @@
                     //     color: var(--light-blue);
                     // }
                     #fa_brands {
-                        color: var(--light-blue);
+                        color: var(--link-hover-color);
+                    }
+                }
+                &:active {
+                    transition: var(--instant-fx);
+                    color: var(--link-active-color);
+                    #fa_brands {
+                        color: var(--link-active-color);
                     }
                 }
             }
             #fa_location {
                 margin-right: 5px;
-                color: var(--light-white);
+                color: var(--text-negative-color);
             }
             #fa_phone {
                 margin-right: 5px;
-                color: var(--light-white);
+                color: var(--text-negative-color);
             }
             #fa_envelope {
                 margin-right: 5px;
-                color: var(--light-white);
+                color: var(--text-negative-color);
             }
             #fa_brands {
                 margin-right: 5px;
-                color: var(--light-white);
+                color: var(--text-negative-color);
             }
         }
     }
@@ -81,12 +106,13 @@
     &__bottom {
         height: 40px;
         display: flex;
+        justify-content: center;
         align-items: center;
-        background-color: var(--mid-black);
+        background-color: var(--footer-bottom-color);
         &_text {
             font-weight: 600;
-            margin-left: 40px;
-            color: var(--mid-white);
+            margin-right: 800px;
+            color: var(--text-negative-color);
         }
     }
 }
