--- a/04 ■► React/final-app/src/components/Header/index.module.scss
+++ b/04 ■► React/final-app/src/components/Header/index.module.scss
@@ -2,6 +2,7 @@
 
 //                              var(--default-color)
 //                              var(--text-color)
+//                              var(--text-negative-color)
 //                              var(--link-color)
 //                              var(--link-hover-color)
 //                              var(--link-active-color)
@@ -13,12 +14,14 @@
 //                              var(--buttons-color)
 //                              var(--buttons-hover-color)
 //                              var(--buttons-active-color)
+//                              var(--filter-shadow-color)
+//                              var(--borders-color)
 
 .header {
     // header overall container
-    width: 100vw; // vh, vw, px, %, rem
+    width: 1420px; // 100vh, 100vw, 1420px, 100%, rem
     height: auto;
-    background-color: var(--dark-white);
+    background-color: var(--header-bg-color);
     border: none;
     // top navbar side of the header
     &__list {
@@ -27,24 +30,23 @@
         height: 40px;
         background-color: transparent;
         border: none;
-        border-bottom: 1px solid var(--dark-black);
+        border-bottom: 1px solid var(--borders-color);
         display: flex;
         justify-content: center;
         align-items: center;
         gap: 60px;
-        // background: linear-gradient(to bottom, var(--mid-black), var(--dark-grey));
-        background-color: var(--default-color);
+        background-color: var(--header-top-color);
         &_buttons {
             border: none;
-            border-bottom: 1px solid var(--light-white);
+            border-bottom: 1px solid var(--text-negative-color);
             background-color: transparent;
-            color: var(--light-white);
+            color: var(--text-negative-color);
             font-size: 14px;
             font-weight: 600;
             text-transform: capitalize;
             transition: var(--quick-fx);
             #fa_caret {
-                color: var(--light-white);
+                color: var(--text-negative-color);
                 margin: 0px 0px 0px 5px; // top right bottom left
                 scale: 0.8;
                 rotate: 180deg;
@@ -52,20 +54,22 @@
             }
             &:hover {
                 scale: 1.01;
-                color: var(--light-red);
-                border-bottom: 1px solid var(--light-red);
-                filter: drop-shadow(0 0 3px var(--mid-black));
+                color: var(--link-hover-color);
+                border-bottom: 1px solid var(--link-hover-color);
+                filter: drop-shadow(0 0 3px var());
                 #fa_caret {
                     rotate: 0deg;
+                    color: var(--link-hover-color);
                 }
             }
             &:active {
                 transition: var(--instant-fx);
-                color: var(--mid-red);
-                border-bottom: 1px solid var(--mid-red);
-                filter: drop-shadow(0 0 8px var(--light-red));
+                color: var(--link-active-color);
+                border-bottom: 1px solid var(--link-active-color);
+                filter: drop-shadow(0 0 8px var());
                 #fa_caret {
                     rotate: 0deg;
+                    color: var(--link-active-color);
                 }
             }
         }
@@ -81,9 +85,9 @@
             align-items: flex-start;
             padding: 10px 0px;
             gap: 10px;
-            border: 1px solid var(--dark-black);
-            background-color: var(--light-white);
-            filter: drop-shadow(0 0 10px var(--dark-black));
+            border: 1px solid var(--borders-color);
+            background-color: var(--default-bg-color);
+            filter: drop-shadow(0 0 10px var(--filter-shadow-color));
             display: none;
             &__columns {
                 display: flex;
@@ -97,19 +101,21 @@
                     letter-spacing: 2px;
                 }
                 &_items {
+                    color: var(--link-color);
                     font-weight: 600;
                     cursor: pointer;
                     margin-left: 30px;
                     transition: var(--quick-fx);
                     &:hover {
-                        color: var(--light-red);
+                        color: var(--link-hover-color);
                     }
                     &:active {
                         transition: var(--instant-fx);
-                        color: var(--mid-red);
+                        color: var(--link-active-color);
                     }
                 }
                 &_discount {
+                    color: var(--link-color);
                     font-size: 18px;
                     font-weight: 900;
                     cursor: pointer;
@@ -117,11 +123,11 @@
                     text-transform: uppercase;
                     transition: var(--quick-fx);
                     &:hover {
-                        color: var(--light-red);
+                        color: var(--link-hover-color);
                     }
                     &:active {
                         transition: var(--instant-fx);
-                        color: var(--mid-red);
+                        color: var(--link-active-color);
                     }
                 }
             }
@@ -137,9 +143,9 @@
         padding: 0 20px;
         font-size: 14px;
         font-weight: 600;
-        background: linear-gradient(to bottom, var(--mid-white), var(--light-grey));
+        background: var(--header-bg-color);
         border: none;
-        border-bottom: 1px solid var(--dark-grey);
+        border-bottom: 1px solid var(--borders-color);
         padding: 0 5%;
         &_logo {
             border: none;
@@ -166,6 +172,7 @@
                 align-items: center;
                 padding-bottom: 2px;
                 margin-right: 5px;
+                color: var(--text-color);
             }
             &__selector {
                 width: auto;
@@ -175,12 +182,12 @@
                 outline: none;
                 border: none;
                 font-weight: 600;
-                color: var(--dark-black);
+                color: var(--text-color);
                 &_options {
                     font-weight: 600;
-                    background-color: var(--light-grey);
+                    background-color: var(--default-bg-color);
                     &:checked {
-                        color: var(--mid-grey);
+                        color: var(--default-color);
                     }
                 }
             }
@@ -199,7 +206,7 @@
                 outline: none;
                 border-top-left-radius: 4px;
                 border-bottom-left-radius: 4px;
-                color: var(--mid-black);
+                color: var(--text-color);
                 font-weight: 600;
             }
             &__button {
@@ -207,25 +214,25 @@
                 height: 30px;
                 border-top-right-radius: 4px;
                 border-bottom-right-radius: 4px;
-                background-color: var(--light-grey);
-                border: 1px solid var(--light-grey);
+                background-color: var(--buttons-color);
+                border: 1px solid var(--link-color);
                 transition: var(--quick-fx);
                 #fa_glass {
-                    color: var(--dark-grey);
+                    color: var(--link-color);
                 }
                 &:hover {
-                    background-color: var(--light-red);
-                    border: 1px solid var(--light-black);
+                    background-color: var(--buttons-hover-color);
+                    border: 1px solid var(--link-hover-color);
                     #fa_glass {
-                        color: var(--light-black);
+                        color: var(--link-hover-color);
                     }
                 }
                 &:active {
                     transition: var(--instant-fx);
-                    background-color: var(--mid-red);
-                    border: 1px solid var(--dark-black);
+                    background-color: var(--buttons-active-color);
+                    border: 1px solid var(--link-active-color);
                     #fa_glass {
-                        color: var(--dark-black);
+                        color: var(--link-active-color);
                     }
                 }
             }
@@ -240,29 +247,36 @@
                 position: relative;
                 width: 40px;
                 height: 20px;
-                border: 1px solid var(--mid-grey);
+                border: 1px solid var(--borders-color);
                 border-radius: 10.5px;
                 box-sizing: content-box;
                 margin: 0 10px;
-                background-color: var(--light-yellow);
+                background-color: var(--link-hover-color);
                 &_button {
                     position: absolute;
                     top: 0%;
-                    left: 0%;
+                    left: 0%; // 100%
+                    transform: translateX(0%); // -95%
                     width: 20px;
                     height: 20px;
-                    border: 1px solid var(--light-grey);
+                    border: 1px solid var(--borders-color);
                     border-radius: 50%;
-                    background-color: var(--light-white);
+                    background-color: var(--default-color);
+                    scale: 1.05;
+                    transition: var(--slow-fx);
                 }
             }
             #fa_sun {
-                scale: 1.8;
-                opacity: 0.9;
+                transition: var(--slow-fx);
+                scale: 1.8; // 1.0
+                opacity: 0.9; // 0.5
+                color: var(--link-color);
             }
             #fa_moon {
-                scale: 1.0;
-                opacity: 0.5;
+                transition: var(--slow-fx);
+                scale: 1.0; // 1.8
+                opacity: 0.5; // 0.9
+                color: var(--link-color);
             }
         }
         &_userpanel {
@@ -271,16 +285,18 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            cursor: pointer;
             position: relative;
             &__image {
                 width: 40px;
                 height: 40px;
-                border: 1px solid var(--mid-grey);
+                border: 1px solid var(--borders-color);
                 border-radius: 50%;
             }
             &__status {
                 margin-left: 10px;
                 font-weight: 600;
+                color: var(--text-color);
             }
 
             &_dropdown {
@@ -295,12 +311,13 @@
                 flex-direction: column;
                 padding: 10px 0px;
                 gap: 10px;
-                border: 1px solid var(--dark-black);
-                background-color: var(--light-white);
-                filter: drop-shadow(0 0 10px var(--dark-black));
+                border: 1px solid var(--borders-color);
+                background-color: var(--default-bg-color);
+                filter: drop-shadow(0 0 10px var(--filter-shadow-color));
                 display: none;
                 &__items {
                     font-weight: 600;
+                    color: var(--link-color);
                     cursor: pointer;
                     margin-left: 30px;
                     transition: var(--quick-fx);
@@ -308,16 +325,16 @@
                         margin-right: 5px;
                     }
                     &:hover {
-                        color: var(--light-red);
+                        color: var(--link-hover-color);
                         #fa_symbols {
-                            color: var(--light-red);
+                            color: var(--link-hover-color);
                         }
                     }
                     &:active {
                         transition: var(--instant-fx);
-                        color: var(--mid-red);
+                        color: var(--link-active-color);
                         #fa_symbols {
-                            color: var(--mid-red);
+                            color: var(--link-active-color);
                         }
                     }
                 }
