--- a/04 ■► React/final-app/src/components/About/index.module.css
+++ b/04 ■► React/final-app/src/components/About/index.module.css
@@ -1,7 +1,14 @@
 .about {
-  width: 1420px;
+  z-index: 1;
+  width: 100%;
   height: 600px;
   border: none;
   background-color: var(--default-bg-color);
   color: var(--text-color);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.about__container {
+  width: 1400px;
 }/*# sourceMappingURL=index.module.css.map */
