--- a/04 ■► React/final-app/src/components/About/index.module.scss
+++ b/04 ■► React/final-app/src/components/About/index.module.scss
@@ -18,11 +18,19 @@
 //                              var(--borders-color)
 
 .about {
-    width: 1420px; // 100%
+    z-index: 1;
+    width: 100%; // 100%
     height: 600px;
     // border: 1px solid var(--borders-color);
     border: none;
     background-color: var(--default-bg-color);
     color: var(--text-color);
+    display: flex;
+    // justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    &__container {
+        width: 1400px;
+    }
 }
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
