--- a/04 ■► React/final-app/src/components/Header/index.module.scss
+++ b/04 ■► React/final-app/src/components/Header/index.module.scss
@@ -19,9 +19,11 @@
 
 .header {
     // header overall container
-    width: 1420px; // 100vh, 100vw, 1420px, 100%, rem
+    z-index: 10;
+    width: 100%; // 100vh, 100vw, 1424px, 100%, rem
     height: auto;
     background-color: var(--header-bg-color);
+    backdrop-filter: blur(5px);
     border: none;
     // top navbar side of the header
     &__list {
@@ -36,9 +38,13 @@
         align-items: center;
         gap: 60px;
         background-color: var(--header-top-color);
+        box-sizing: content-box;
         &_buttons {
+            // border: 1px solid red;
+            box-sizing: content-box;
+            height: 100%;
             border: none;
-            border-bottom: 1px solid var(--text-negative-color);
+            // border-bottom: 1px solid var(--text-negative-color);
             background-color: transparent;
             color: var(--text-negative-color);
             font-size: 14px;
@@ -74,31 +80,32 @@
             }
         }
         &_productsdropdown {
-            z-index: 2;
+            z-index: 1;
             position: absolute;
             top: 100%;
             left: 30%;
-            width: 500px;
+            width: auto;
             height: auto;
-            display: flex;
+            display: none; // flex or none
             justify-content: center;
             align-items: flex-start;
-            padding: 10px 0px;
-            gap: 10px;
+            padding: 20px 20px;
+            gap: 40px;
             border: 1px solid var(--borders-color);
             background-color: var(--default-bg-color);
-            filter: drop-shadow(0 0 10px var(--filter-shadow-color));
-            display: none;
+            // filter: drop-shadow(0 0 10px var(--filter-shadow-color));
             &__columns {
                 display: flex;
                 flex-direction: column;
                 width: 33%;
                 &_header {
+                    color: var(--text-color);
                     font-size: 18px;
                     font-weight: 900;
                     margin-left: 30px;
                     text-transform: uppercase;
                     letter-spacing: 2px;
+                    margin-bottom: 15px;
                 }
                 &_items {
                     color: var(--link-color);
@@ -106,6 +113,9 @@
                     cursor: pointer;
                     margin-left: 30px;
                     transition: var(--quick-fx);
+                    &:not(:last-of-type) {
+                        margin-bottom: 5px;
+                    }
                     &:hover {
                         color: var(--link-hover-color);
                     }
@@ -243,6 +253,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            margin: 0px 75px;
             &__slider {
                 position: relative;
                 width: 40px;
@@ -281,12 +292,14 @@
         }
         &_userpanel {
             height: 100%;
-            width: 250px;
+            width: 200px;
             display: flex;
             justify-content: center;
             align-items: center;
+            // border: 1px solid red;
             cursor: pointer;
             position: relative;
+            box-sizing: content-box;
             &__image {
                 width: 40px;
                 height: 40px;
@@ -298,23 +311,21 @@
                 font-weight: 600;
                 color: var(--text-color);
             }
-
             &_dropdown {
-                z-index: 2;
+                z-index: -1;
                 position: absolute;
                 top: 100%;
                 left: 50%;
                 transform: translateX(-50%);
-                width: 150px;
+                width: 200px;
                 height: auto;
-                display: flex;
+                display: none; // flex or none
                 flex-direction: column;
                 padding: 10px 0px;
                 gap: 10px;
                 border: 1px solid var(--borders-color);
                 background-color: var(--default-bg-color);
                 filter: drop-shadow(0 0 10px var(--filter-shadow-color));
-                display: none;
                 &__items {
                     font-weight: 600;
                     color: var(--link-color);
