--- a/04 ■► React/final-app/src/global.css
+++ b/04 ■► React/final-app/src/global.css
@@ -8,13 +8,14 @@
   --default-bg-color: rgb(215,215,215);
   --footer-bg-color: rgb(12,24,48);
   --footer-bottom-color: rgb(35,35,35);
-  --header-bg-color: rgb(185,185,185);
+  --header-bg-color: rgba(185,185,185,0.7);
   --header-top-color: rgb(45,45,45);
   --buttons-color: rgb(200,200,200);
   --buttons-hover-color: rgb(255,255,100);
   --buttons-active-color: rgb(125,255,5);
   --filter-shadow-color: rgb(10,10,10);
   --borders-color: rgb(45,45,45);
+  --body-bg: linear-gradient(to right, rgb(250,150,10), rgb(10,250,150));
   --slow-fx: ease-in-out 0.35s;
   --quick-fx: ease 0.15s;
   --instant-fx: linear 0s;
@@ -27,6 +28,10 @@
 body {
   display: flex;
   justify-content: center;
+  background: var(--body-bg);
+  width: 100%;
+  height: 100%;
+  border: none;
 }
 
 * {
