update ShopNet | April 30, 2023 at 16:14

--- a/04 ■► React/final-app/src/components/Header/index.module.scss
+++ b/04 ■► React/final-app/src/components/Header/index.module.scss
@@ -27,6 +27,7 @@
     border: none;
     // top navbar side of the header
     &__list {
+        z-index: 1;
         position: relative;
         width: 100%;
         height: 40px;
