--- a/04 ■► React/final-app/src/components/Header/index.module.scss
+++ b/04 ■► React/final-app/src/components/Header/index.module.scss
@@ -65,7 +65,7 @@
                 border-bottom: 1px solid var(--link-hover-color);
                 filter: drop-shadow(0 0 3px var());
                 #fa_caret {
-                    rotate: 0deg;
+                    // rotate: 0deg;
                     color: var(--link-hover-color);
                 }
             }
@@ -75,7 +75,7 @@
                 border-bottom: 1px solid var(--link-active-color);
                 filter: drop-shadow(0 0 8px var());
                 #fa_caret {
-                    rotate: 0deg;
+                    // rotate: 0deg;
                     color: var(--link-active-color);
                 }
             }
@@ -87,14 +87,18 @@
             left: 30%;
             width: auto;
             height: auto;
-            display: none; // flex or none
+            display: flex; // flex or none
+            visibility: hidden; // visible or hidden
+            opacity: 0.0; // 1.0 or 0.0
+            transform: translate(0, -100%); // (0%, 0%) or (0%, -100%)
+            transition: ease-in-out 0.2s;
             justify-content: center;
             align-items: flex-start;
             padding: 20px 20px;
             gap: 40px;
             border: 1px solid var(--borders-color);
             background-color: var(--default-bg-color);
-            // filter: drop-shadow(0 0 10px var(--filter-shadow-color));
+            filter: drop-shadow(0 0 2px var(--filter-shadow-color));
             &__columns {
                 display: flex;
                 flex-direction: column;
@@ -114,6 +118,7 @@
                     cursor: pointer;
                     margin-left: 30px;
                     transition: var(--quick-fx);
+                    width: fit-content;
                     &:not(:last-of-type) {
                         margin-bottom: 5px;
                     }
@@ -133,6 +138,7 @@
                     margin-left: 30px;
                     text-transform: uppercase;
                     transition: var(--quick-fx);
+                    width: fit-content;
                     &:hover {
                         color: var(--link-hover-color);
                     }
@@ -320,19 +326,24 @@
                 transform: translateX(-50%);
                 width: 200px;
                 height: auto;
-                display: none; // flex or none
-                flex-direction: column;
+                display: flex; // flex or none
+                visibility: hidden; // visible or hidden
+                opacity: 0.0; // 1.0 or 0.0
+                transform: translate(-50%, -100%); // (-50%, 0%) or (-50%, -100%)
+                transition: ease-in-out 0.2s;
                 padding: 10px 0px;
                 gap: 10px;
                 border: 1px solid var(--borders-color);
                 background-color: var(--default-bg-color);
                 filter: drop-shadow(0 0 10px var(--filter-shadow-color));
+                flex-direction: column;
                 &__items {
                     font-weight: 600;
                     color: var(--link-color);
                     cursor: pointer;
-                    margin-left: 30px;
+                    margin-left: 50px;
                     transition: var(--quick-fx);
+                    width: fit-content;
                     #fa_symbols {
                         margin-right: 5px;
                     }
