--- a/04 ■► React/final-app/src/global.css
+++ b/04 ■► React/final-app/src/global.css
@@ -45,6 +45,14 @@ body {
   font-family: "Josefin Sans", sans-serif;
   color: var(--dark-black);
 }
+*::-moz-selection {
+  background: var(--buttons-hover-color);
+  color: var(--text-color);
+}
+*::selection {
+  background: var(--buttons-hover-color);
+  color: var(--text-color);
+}
 
 button {
   cursor: pointer;
