--- a/04 ■► React/final-app/src/pages/About/index.module.css
+++ b/04 ■► React/final-app/src/pages/About/index.module.css
@@ -8,7 +8,9 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  padding: 20px 0px;
 }
 .about__container {
-  width: 1400px;
+  width: 95%;
+  border: 1px solid red;
 }/*# sourceMappingURL=index.module.css.map */
