--- a/04 ■► React/final-app/src/pages/About/index.module.scss
+++ b/04 ■► React/final-app/src/pages/About/index.module.scss
@@ -29,8 +29,10 @@
     // justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding: 20px 0px;
     &__container {
-        width: 1400px;
+        width: 95%;
+        border: 1px solid red;
     }
 }
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
