--- a/04 ■► React/final-app/src/pages/Homepage/index.module.css
+++ b/04 ■► React/final-app/src/pages/Homepage/index.module.css
@@ -1,6 +1,6 @@
 .homepage {
   z-index: 1;
-  width: 100vw;
+  width: 100%;
   height: 600px;
   border: none;
   border-bottom: 1px solid var(--borders-color);
@@ -11,11 +11,11 @@
   flex-direction: column;
 }
 .homepage__categories {
-  width: 1400px;
+  width: 95%;
 }
 .homepage__brands {
-  width: 1400px;
+  width: 95%;
 }
 .homepage__discount {
-  width: 1400px;
+  width: 95%;
 }/*# sourceMappingURL=index.module.css.map */
